--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <div class="banner">Welcome to Amazon! Find the best deals here.</div>
     <div class="products">
         <div class="product">
-            <img src="NTE3Zjc1NTEt-MzBhMzU0M2Mt-w186._SY116_CB428347144_.jpg" alt="Skincare">
+            <img src="NTE3Zjc1NTEt-MzBhMzU0M2Mt-w186._SY116_CB428347144_.jpg" alt="Product 1">
             <p>Product 1</p>
             <button>Buy Now</button>
         </div>
         <div class="product">
-            <img src="NTE3Zjc1NTEt-YjliNzM1M2Mt-w186._SY116_CB428347147_.jpg" alt="Cooking Appliances">
+            <img src="NTE3Zjc1NTEt-YjliNzM1M2Mt-w186._SY116_CB428347147_.jpg" alt="Product 2">
             <p>Product 2</p>
             <button>Buy Now</button>
         </div>
         <div class="product">
-            <img src="NTE3Zjc1NTEt-ZWVhMjc2YjAt-w186._SY116_CB410473316_.jpg" alt="Designer Top">
+            <img src="NTE3Zjc1NTEt-ZWVhMjc2YjAt-w186._SY116_CB410473316_.jpg" alt="Product 3">
             <p>Product 3</p>
             <button>Buy Now</button>
         </div>
